Unit tests are now compiling